// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonDatePicker renders change decade replacement strings 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker--open neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--open neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><span class="neon-date-picker__calendar-title-readonly">2020–2029</span>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="string 10">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="string 11">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-options"><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2020</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2021</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2022</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option--selected neon-date-picker__calendar-option--today neon-date-picker__calendar-option neon-date-picker__calendar-option--selected neon-date-picker__calendar-option--today neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2023</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2024</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2025</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2026</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2027</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2028</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">2029</span>
            <!--v-if-->
          </button></div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders change month replacement strings 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="string 1" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="display: none;">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="string 4">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">March 2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="string 5">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="string 6">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <div class="neon-date-picker__calendar-dows">
          <div class="neon-date-picker__calendar-dow">Mon</div>
          <div class="neon-date-picker__calendar-dow">Tue</div>
          <div class="neon-date-picker__calendar-dow">Wed</div>
          <div class="neon-date-picker__calendar-dow">Thu</div>
          <div class="neon-date-picker__calendar-dow">Fri</div>
          <div class="neon-date-picker__calendar-dow">Sat</div>
          <div class="neon-date-picker__calendar-dow">Sun</div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-dates">
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">1</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">2</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">3</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">4</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">5</span>
            <!--v-if-->
          </button>
        </div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">6</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">7</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">8</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">9</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">10</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">11</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">12</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">13</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">14</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">15</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date--today neon-date-picker__calendar-date neon-date-picker__calendar-date--today neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">16</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">17</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">18</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">19</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">20</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">21</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">22</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">23</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">24</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">25</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">26</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">27</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">28</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">29</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">30</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">31</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
        </div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">string 3</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">string 2</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders change year replacement strings 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker--open neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--open neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="string 7">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="string 8">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="string 9">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-options"><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Jan</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Feb</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option--selected neon-date-picker__calendar-option--today neon-date-picker__calendar-option neon-date-picker__calendar-option--selected neon-date-picker__calendar-option--today neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Mar</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Apr</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">May</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Jun</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Jul</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Aug</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Sep</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Oct</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Nov</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button--full-width neon-button neon-date-picker__calendar-option neon-date-picker__calendar-option" tabindex="0">
            <!--v-if--><span class="neon-button__label">Dec</span>
            <!--v-if-->
          </button></div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders closed 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="display: none;">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="Change month">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">April 2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="Previous month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="Next month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <div class="neon-date-picker__calendar-dows">
          <div class="neon-date-picker__calendar-dow">Mon</div>
          <div class="neon-date-picker__calendar-dow">Tue</div>
          <div class="neon-date-picker__calendar-dow">Wed</div>
          <div class="neon-date-picker__calendar-dow">Thu</div>
          <div class="neon-date-picker__calendar-dow">Fri</div>
          <div class="neon-date-picker__calendar-dow">Sat</div>
          <div class="neon-date-picker__calendar-dow">Sun</div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-dates">
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">1</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">2</span>
            <!--v-if-->
          </button>
        </div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">3</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">4</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">5</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">6</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">7</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">8</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">9</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">10</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">11</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">12</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">13</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">14</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date--selected neon-date-picker__calendar-date neon-date-picker__calendar-date--selected neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">15</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">16</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">17</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">18</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">19</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">20</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">21</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">22</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">23</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">24</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">25</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">26</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">27</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">28</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">29</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">30</span>
            <!--v-if-->
          </button></div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders open 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker--open neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--open neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="Change month">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">April 2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="Previous month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="Next month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <div class="neon-date-picker__calendar-dows">
          <div class="neon-date-picker__calendar-dow">Mon</div>
          <div class="neon-date-picker__calendar-dow">Tue</div>
          <div class="neon-date-picker__calendar-dow">Wed</div>
          <div class="neon-date-picker__calendar-dow">Thu</div>
          <div class="neon-date-picker__calendar-dow">Fri</div>
          <div class="neon-date-picker__calendar-dow">Sat</div>
          <div class="neon-date-picker__calendar-dow">Sun</div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-dates">
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">1</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">2</span>
            <!--v-if-->
          </button>
        </div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">3</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">4</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">5</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">6</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">7</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">8</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">9</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">10</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">11</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">12</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">13</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">14</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date--selected neon-date-picker__calendar-date neon-date-picker__calendar-date--selected neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">15</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">16</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">17</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">18</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">19</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">20</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">21</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">22</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">23</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">24</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">25</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">26</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">27</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">28</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">29</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">30</span>
            <!--v-if-->
          </button></div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders with defaults of today 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker--open neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--open neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="Change month">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">March 2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="Previous month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="Next month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <div class="neon-date-picker__calendar-dows">
          <div class="neon-date-picker__calendar-dow">Mon</div>
          <div class="neon-date-picker__calendar-dow">Tue</div>
          <div class="neon-date-picker__calendar-dow">Wed</div>
          <div class="neon-date-picker__calendar-dow">Thu</div>
          <div class="neon-date-picker__calendar-dow">Fri</div>
          <div class="neon-date-picker__calendar-dow">Sat</div>
          <div class="neon-date-picker__calendar-dow">Sun</div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-dates">
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">1</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">2</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">3</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">4</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">5</span>
            <!--v-if-->
          </button>
        </div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">6</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">7</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">8</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">9</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">10</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">11</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">12</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">13</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">14</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">15</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date--today neon-date-picker__calendar-date neon-date-picker__calendar-date--today neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">16</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">17</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">18</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">19</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">20</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">21</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">22</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">23</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">24</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">25</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">26</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">27</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">28</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">29</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">30</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">31</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
        </div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonDatePicker renders with locale 1`] = `
<div class="neon-date-picker--m neon-date-picker--primary neon-date-picker--open neon-date-picker">
  <div class="neon-dropdown--with-indicator neon-dropdown--open neon-dropdown--m neon-dropdown--low-contrast neon-dropdown">
    <div>
      <!-- @slot optionally replace the dropdown button with a custom control -->
      <div class="neon-input--with-icon neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--primary neon-input--state-ready neon-input neon-date-picker__button"><input aria-placeholder="" placeholder="" tabindex="-1" type="text" class="neon-input__textfield neon-input__text neon-date-picker__button">
        <div class="neon-icon--low-contrast neon-icon neon-input__icon--read-only neon-input__icon neon-input__icon--read-only neon-input__icon" role="false" tabindex="false"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32">
            <path class="neon-svg--fill" d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"></path>
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div aria-label="Open calendar" tabindex="0" class="neon-date-picker__button-click-capture" role="button"></div>
    </div>
    <div class="neon-dropdown__click-blocker"></div>
    <div class="neon-dropdown__content--bottom-left neon-dropdown__content" style="">
      <!-- @slot The content of the open dropdown -->
      <div class="neon-date-picker__calendar">
        <div class="neon-date-picker__calendar-header"><button class="neon-button--m neon-button--high-contrast neon-button--text neon-button--state-ready neon-button--with-icon neon-button--icon-right neon-button neon-date-picker__calendar-header-title neon-date-picker__calendar-header-title" tabindex="0" aria-label="Change month">
            <div class="neon-icon--high-contrast neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                <path class="neon-svg--fill" fill-rule="evenodd" d="M7.72 21.78a.75.75 0 0 0 1.06-1.06L5.56 17.5h14.69a.75.75 0 0 0 0-1.5H5.56l3.22-3.22a.75.75 0 1 0-1.06-1.06l-4.5 4.5a.75.75 0 0 0 0 1.06l4.5 4.5Zm8.56-9.5a.75.75 0 1 1-1.06-1.06L18.44 8H3.75a.75.75 0 0 1 0-1.5h14.69l-3.22-3.22a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5Z"></path>
              </svg>
            </div><span class="neon-button__label">April 2023</span>
            <!--v-if-->
          </button>
          <div class="neon-date-picker__calendar-header-actions"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__previous-button neon-date-picker__previous-button" tabindex="0" aria-label="Previous month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" d="M15.28 5.22a.75.75 0 0 1 0 1.06L9.56 12l5.72 5.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.75.75 0 0 1 1.06 0Z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button--with-icon neon-button--icon-only neon-button neon-date-picker__next-button neon-date-picker__next-button" tabindex="0" aria-label="Next month">
              <div class="neon-icon--primary neon-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
                  <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
                </svg>
              </div>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </div>
        <div class="neon-date-picker__calendar-dows">
          <div class="neon-date-picker__calendar-dow">Mo</div>
          <div class="neon-date-picker__calendar-dow">Di</div>
          <div class="neon-date-picker__calendar-dow">Mi</div>
          <div class="neon-date-picker__calendar-dow">Do</div>
          <div class="neon-date-picker__calendar-dow">Fr</div>
          <div class="neon-date-picker__calendar-dow">Sa</div>
          <div class="neon-date-picker__calendar-dow">So</div>
        </div>
        <hr>
        <div class="neon-date-picker__calendar-dates">
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div>
          <div class="neon-date-picker__calendar-date neon-date-picker__calendar-date--empty"></div><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">1</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">2</span>
            <!--v-if-->
          </button>
        </div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">3</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">4</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">5</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">6</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">7</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">8</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">9</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">10</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">11</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">12</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">13</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">14</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date--selected neon-date-picker__calendar-date neon-date-picker__calendar-date--selected neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">15</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">16</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">17</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">18</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">19</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">20</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">21</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">22</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">23</span>
            <!--v-if-->
          </button></div>
        <div class="neon-date-picker__calendar-dates"><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">24</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">25</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">26</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">27</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">28</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">29</span>
            <!--v-if-->
          </button><button class="neon-button--m neon-button--primary neon-button--text neon-button--state-ready neon-button--circular neon-button neon-date-picker__calendar-date neon-date-picker__calendar-date" tabindex="0">
            <!--v-if--><span class="neon-button__label">30</span>
            <!--v-if-->
          </button></div>
        <hr>
        <div class="neon-button-group"><button class="neon-button--s neon-button--high-contrast neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-clear-button neon-date-picker__calendar-clear-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Clear</span>
            <!--v-if-->
          </button><button class="neon-button--s neon-button--primary neon-button--text neon-button--state-ready neon-button neon-date-picker__calendar-done-button neon-date-picker__calendar-done-button" tabindex="0">
            <!--v-if--><span class="neon-button__label">Done</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
  </div>
  <div class="neon-input--with-state-highlight neon-input--with-state-icon neon-input--m neon-input--low-contrast neon-input--state-ready neon-input neon-date-picker__native-input"><input aria-placeholder="" placeholder="" tabindex="-1" type="date" class="neon-input__textfield neon-input__text neon-date-picker__native-input">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;
